--- a/.github/workflows/update_protos.yml
+++ b/.github/workflows/update_protos.yml
@@ -9,9 +9,15 @@ on:
 jobs:
   update-protos:
     if: github.repository_owner == 'viamrobotics'
-    runs-on: [self-hosted, x64]
-    container:
-      image: ghcr.io/viamrobotics/canon:amd64
+    runs-on: [self-hosted, ARM64, macOS]
+    strategy:
+      fail-fast: false
+      matrix:
+        include:
+          - target: aarch64-apple-darwin
+            platform: macosx_arm64
+          - target: x86_64-apple-darwin
+            platform: macosx_x86_64
     steps:
       - uses: actions/checkout@v3
       - name: setup-grpc-manual
