--- a/.github/workflows/update_protos.yml
+++ b/.github/workflows/update_protos.yml
@@ -9,13 +9,9 @@ on:
 jobs:
   update-protos:
     if: github.repository_owner == 'viamrobotics'
-    runs-on: [self-hosted, ARM64, macOS]
-    strategy:
-      fail-fast: false
-      matrix:
-        include:
-          - target: aarch64-apple-darwin
-            platform: macosx_arm64
+    runs-on: [self-hosted, x64]
+    container:
+      image: ghcr.io/viamrobotics/canon:amd64
     steps:
       - uses: actions/checkout@v3
       - name: setup-grpc-manual
@@ -38,7 +34,7 @@ jobs:
         with:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
       - name: Generate buf
-        run: cmake -B build -DVIAMCPPSDK_USE_DYNAMIC_PROTOS=ON -DCMAKE_PREFIX_PATH=${{ github.workspace }}/vcpkg/buildtrees/grpc/x64-linux-dbg --debug-find && cmake --build ./build --target update-static-protos
+        run: cmake -B build -DVIAMCPPSDK_USE_DYNAMIC_PROTOS=ON -DCMAKE_PREFIX_PATH=./vcpkg/installed/x64-linux/share/grpc --debug-find && cmake --build ./build --target update-static-protos
         env:
           BOOST_ROOT: ${{ github.workspace }}/boost/boost
           BUF_TOKEN: ${{ secrets.BUF_TOKEN }}
