--- a/.github/workflows/update_protos.yml
+++ b/.github/workflows/update_protos.yml
@@ -16,8 +16,8 @@ jobs:
       - uses: actions/checkout@v3
       - name: setup-grpc-manual
         run: git clone https://github.com/Microsoft/vcpkg.git && cd vcpkg && ./bootstrap-vcpkg.sh && ./vcpkg integrate install && ./vcpkg install openssl && ./vcpkg install grpc && ./vcpkg install upb
-      - name: print-files
-        run: find . -type f | xargs echo
+      - name: setup-deps-manual
+        run: sudo apt-get install -y protobuf-compiler-grpc libgrpc-dev libgrpc++-dev
       - uses: MarkusJx/install-boost@v2.4.4
         with:
           boost_version: 1.80.0
