--- a/.github/workflows/update_protos.yml
+++ b/.github/workflows/update_protos.yml
@@ -43,6 +43,7 @@ jobs:
         with:
           commit-message: '[WORKFLOW] Updating protos from ${{ github.event.client_payload.repo_name }}, commit: ${{ github.event.client_payload.sha }}'
           branch: 'origin/update-protos'
+          add-paths: src/gen/*
           delete-branch: true
           title: Automated Protos Update
           body: This is an auto-generated PR to update proto definitions. Check the commits to see which repos and commits are responsible for the changes
