--- a/.github/workflows/update_protos.yml
+++ b/.github/workflows/update_protos.yml
@@ -15,9 +15,9 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: setup-grpc-manual
-        run: echo "git clone https://github.com/Microsoft/vcpkg.git && cd vcpkg && ./bootstrap-vcpkg.sh && ./vcpkg integrate install && ./vcpkg install openssl && ./vcpkg install grpc && ./vcpkg install upb
+        run: echo "git clone https://github.com/Microsoft/vcpkg.git && cd vcpkg && ./bootstrap-vcpkg.sh && ./vcpkg integrate install && ./vcpkg install openssl && ./vcpkg install grpc && ./vcpkg install upb"
       - name: setup-deps-manual
-        run: sudo apt-get install -y  libssl-dev protobuf-compiler-grpc libgrpc-dev libgrpc++-dev"
+        run: sudo apt-get install -y libssl-dev protobuf-compiler-grpc libgrpc-dev libgrpc++-dev
       - uses: MarkusJx/install-boost@v2.4.4
         with:
           boost_version: 1.80.0
