--- a/.github/workflows/update_protos.yml
+++ b/.github/workflows/update_protos.yml
@@ -14,10 +14,10 @@ jobs:
       image: ghcr.io/viamrobotics/canon:amd64
     steps:
       - uses: actions/checkout@v3
-      - name: setup-grpc-manual
-        run: echo "git clone https://github.com/Microsoft/vcpkg.git && cd vcpkg && ./bootstrap-vcpkg.sh && ./vcpkg integrate install && ./vcpkg install openssl && ./vcpkg install grpc && ./vcpkg install upb"
-      - name: setup-deps-manual
-        run: sudo apt-get install -y libssl-dev protobuf-compiler-grpc libgrpc-dev libgrpc++-dev
+      - name: setup-grpc
+        run: git clone https://github.com/Microsoft/vcpkg.git && cd vcpkg && ./bootstrap-vcpkg.sh && ./vcpkg integrate install && ./vcpkg install grpc && ./vcpkg install upb
+      - name: setup-openssl
+        run: sudo apt-get install libssl-dev
       - uses: MarkusJx/install-boost@v2.4.4
         with:
           boost_version: 1.80.0
