--- a/.github/workflows/update_protos.yml
+++ b/.github/workflows/update_protos.yml
@@ -15,7 +15,11 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: setup-grpc
-        run: git clone https://github.com/Microsoft/vcpkg.git && cd vcpkg && ./bootstrap-vcpkg.sh && ./vcpkg integrate install && ./vcpkg install grpc && ./vcpkg install upb
+        run: |
+          git clone https://github.com/Microsoft/vcpkg.git \
+          && cd vcpkg && ./bootstrap-vcpkg.sh && ./vcpkg integrate install \
+          && ./vcpkg install grpc \
+          && ./vcpkg install upb
       - name: setup-openssl
         run: sudo apt-get install libssl-dev
       - uses: MarkusJx/install-boost@v2.4.4
@@ -34,7 +38,9 @@ jobs:
         with:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
       - name: Generate buf
-        run: cmake -B build -DVIAMCPPSDK_USE_DYNAMIC_PROTOS=ON -DCMAKE_PREFIX_PATH=./vcpkg/installed/x64-linux/share --debug-find && cmake --build ./build --target update-static-protos
+        run: |
+          cmake -B build -DVIAMCPPSDK_USE_DYNAMIC_PROTOS=ON -DCMAKE_PREFIX_PATH=./vcpkg/installed/x64-linux/share \
+          && cmake --build ./build --target update-static-protos
         env:
           BOOST_ROOT: ${{ github.workspace }}/boost/boost
           BUF_TOKEN: ${{ secrets.BUF_TOKEN }}
