--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -18,5 +18,6 @@ jobs:
         env:
           VALIDATE_ALL_CODEBASE: false
           VALIDATE_CPP: true
+          IGNORE_GENERATED_FILES: true
           DEFAULT_BRANCH: main
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
