--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -107,10 +107,10 @@ if (VIAMCPPSDK_USE_DYNAMIC_PROTOS)
     ${PROTO_GEN_DIR}/gen/google/api/httpbody.pb.h
     ${PROTO_GEN_DIR}/gen/google/api/http.pb.cc
     ${PROTO_GEN_DIR}/gen/google/api/http.pb.h
-    ${PROTO_GEN_DIR}/gen/module/v1/module.grpc.pb.cc
-    ${PROTO_GEN_DIR}/gen/module/v1/module.grpc.pb.h
-    ${PROTO_GEN_DIR}/gen/module/v1/module.pb.cc
-    ${PROTO_GEN_DIR}/gen/module/v1/module.pb.h
+	${PROTO_GEN_DIR}/gen/module/v1/module.grpc.pb.cc
+	${PROTO_GEN_DIR}/gen/module/v1/module.grpc.pb.h
+	${PROTO_GEN_DIR}/gen/module/v1/module.pb.cc
+	${PROTO_GEN_DIR}/gen/module/v1/module.pb.h
     ${PROTO_GEN_DIR}/gen/robot/v1/robot.grpc.pb.cc
     ${PROTO_GEN_DIR}/gen/robot/v1/robot.grpc.pb.h
     ${PROTO_GEN_DIR}/gen/robot/v1/robot.pb.cc
@@ -183,13 +183,13 @@ target_sources(viamcpp
     ${PROTO_GEN_DIR}/gen/common/v1/common.pb.cc
     ${PROTO_GEN_DIR}/gen/component/camera/v1/camera.grpc.pb.cc
     ${PROTO_GEN_DIR}/gen/component/camera/v1/camera.pb.cc
-    ${PROTO_GEN_DIR}/gen/component/generic/v1/generic.grpc.pb.cc
-    ${PROTO_GEN_DIR}/gen/component/generic/v1/generic.pb.cc
+	  ${PROTO_GEN_DIR}/gen/component/generic/v1/generic.grpc.pb.cc
+	  ${PROTO_GEN_DIR}/gen/component/generic/v1/generic.pb.cc
     ${PROTO_GEN_DIR}/gen/google/api/annotations.pb.cc
     ${PROTO_GEN_DIR}/gen/google/api/http.pb.cc
     ${PROTO_GEN_DIR}/gen/google/api/httpbody.pb.cc
-    ${PROTO_GEN_DIR}/gen/module/v1/module.grpc.pb.cc
-    ${PROTO_GEN_DIR}/gen/module/v1/module.pb.cc
+	  ${PROTO_GEN_DIR}/gen/module/v1/module.grpc.pb.cc
+	  ${PROTO_GEN_DIR}/gen/module/v1/module.pb.cc
     ${PROTO_GEN_DIR}/gen/robot/v1/robot.pb.cc
     ${PROTO_GEN_DIR}/gen/robot/v1/robot.grpc.pb.cc
     ${PROTO_GEN_DIR}/gen/tagger/v1/tagger.pb.cc
@@ -289,12 +289,6 @@ target_sources(viamcpp
       ${PROTO_GEN_DIR}/gen/tagger/v1/tagger.pb.h
 )
 
-set_target_properties(
-  viamcpp PROPERTIES
-  SOVERSION noabi
-  VERSION ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}.${PROJECT_VERSION_PATCH}
-)
-
 target_include_directories(viamcpp
   PUBLIC
     "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>"
@@ -311,15 +305,14 @@ target_include_directories(viamcpp
     "$<INSTALL_INTERFACE:${VIAMCPPSDK_PROTOBUF_INCLUDE_DIRS}>"
 )
 
+# This shouldn't be necessary, but we need it so that the installation
+# path of the C++ SDK is added to the link line of consumers to that
+# `-lviam_rust_utils` can be meaningfully resolved.
+#
+# TODO: Remove this when we can import `viam_rust_utils` as a real
+# imported target with its own properties.
 target_link_directories(viamcpp
-  PUBLIC
-    # This shouldn't be necessary, but we need it so that the
-    # installation path of the C++ SDK is added to the link line of
-    # consumers to that `-lviam_rust_utils` can be meaningfully
-    # resolved.
-    #
-    # TODO: Remove this when we can import `viam_rust_utils` as a real
-    # imported target with its own properties.
+  INTERFACE
     "$<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}>"
     "$<INSTALL_INTERFACE:${CMAKE_INSTALL_LIBDIR}>"
 
@@ -349,12 +342,9 @@ add_subdirectory(tests)
 install(
   TARGETS viamcpp
   EXPORT LibTargets
-  RUNTIME COMPONENT viam-cpp-sdk_runtime
-  LIBRARY COMPONENT viam-cpp-sdk_runtime
-      NAMELINK_COMPONENT viam-cpp-sdk_dev
-  ARCHIVE COMPONENT viam-cpp-sdk_dev
-  FILE_SET viamcpp_public_includes COMPONENT viam-cpp-sdk_dev
-  FILE_SET viamcpp_public_pb_includes COMPONENT viam-cpp-sdk_dev
+  LIBRARY COMPONENT runtime
+  FILE_SET viamcpp_public_includes COMPONENT dev
+  FILE_SET viamcpp_public_pb_includes COMPONENT dev
 )
 
 install(
@@ -362,7 +352,6 @@ install(
   FILE viam-cpp-sdkLibTargets.cmake
   NAMESPACE viam-cpp-sdk::
   DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/viam-cpp-sdk
-  COMPONENT viam-cpp-sdk_dev
 )
 
 
@@ -384,5 +373,5 @@ configure_file(
 install(FILES
   ${CMAKE_CURRENT_BINARY_DIR}/config/viam-cpp-sdk-libviamcpp.pc
   DESTINATION ${CMAKE_INSTALL_LIBDIR}/pkgconfig
-  COMPONENT viam-cpp-sdk_dev
+  COMPONENT dev
 )
