--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,7 +7,7 @@ jobs:
     if: github.repository_owner == 'viamrobotics'
     runs-on: [self-hosted, x64]
     container:
-      image: ghcr.io/viamrbotics/canon:amd64
+      image: ghcr.io/viamrobotics/canon:amd64
     steps:
       - uses: actions/checkout@v3
       ###########################################
