RSDK-2086 Camera Wrapper (#53)
* camera wrapper

* camera wrapper

* fix merge

* merge

* fix subtype

* fixed generic and cmake

* code cleanup

* camera namespace

* remove extraneous camera test folder

* linter, PR edits

* lint fix styling

* minor fixes

* moved mockclient to the mock file

* changed style to google

* lint style llvm

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -203,6 +203,9 @@ target_sources(viamcpp
     registry/registry.cpp
     common/proto_type.cpp
     common/utils.cpp
+    components/camera/camera.cpp
+    components/camera/client.cpp
+    components/camera/server.cpp
     components/component_base.cpp
     components/component_type.cpp
     components/generic/client.cpp
@@ -231,6 +234,9 @@ target_sources(viamcpp
     FILES
       common/proto_type.hpp
       common/utils.hpp
+      components/camera/camera.hpp
+      components/camera/client.hpp
+      components/camera/server.hpp
       components/component_base.hpp
       components/component_type.hpp
       components/generic/client.hpp
