--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -15,4 +15,6 @@
 enable_testing()
 include(viamcppsdk_utils)
 viamcppsdk_add_boost_test(test_generic_component.cpp)
+viamcppsdk_add_boost_test(test_camera.cpp)
+viamcppsdk_add_boost_test(test_types.cpp)
 
