fix path to tests

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -50,6 +50,6 @@ jobs:
       ###########################################
       - name: run-tests
         run: |
-          cd src/tests && ctest
+          cd build/src/tests && ctest
 
 
