--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -334,9 +334,9 @@ target_link_directories(viamcpp
 
 target_link_libraries(viamcpp
   PUBLIC ${VIAMCPPSDK_GRPCXX_LIBRARIES}
-  PUBLIC ${VIAMCPPSDK_GRPCXX_REFLECTION_LIBRARIES}
   PUBLIC ${VIAMCPPSDK_GRPC_LIBRARIES}
   PUBLIC ${VIAMCPPSDK_PROTOBUF_LIBRARIES}
+  PRIVATE ${VIAMCPPSDK_GRPCXX_REFLECTION_LIBRARIES}
   PUBLIC Boost::headers
   PRIVATE Boost::log
   PRIVATE viam_rust_utils
