--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -342,9 +342,9 @@ target_link_libraries(viamcpp
   PUBLIC ${VIAMCPPSDK_GRPCXX_LIBRARIES}
   PUBLIC ${VIAMCPPSDK_GRPC_LIBRARIES}
   PUBLIC ${VIAMCPPSDK_PROTOBUF_LIBRARIES}
+  PRIVATE ${VIAMCPPSDK_GRPCXX_REFLECTION_LIBRARIES}
   PUBLIC Boost::headers
   PRIVATE Boost::log
-  PRIVATE gRPC::grpc++_reflection
   PRIVATE viam_rust_utils
   PRIVATE Threads::Threads
 )
