--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -13,5 +13,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
+      - name: install clang-format
+        run: sudo apt install clang-format
       - name: Run linter
         run: sh ./bin/run-clang-format.sh
