--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -13,11 +13,18 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - name: Run linter
-        uses: github/super-linter/slim@v4
-        env:
-          VALIDATE_ALL_CODEBASE: false
-          VALIDATE_CPP: true
-          FILTER_REGEX_EXCLUDE: .*src/gen/.*
-          DEFAULT_BRANCH: main
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: install clang-format
+        run: sudo apt install -y clang-format
+      - name: verify no uncommitted changes
+        run: |
+          git init
+          git add .
+          chown -R testbot .
+          sudo -u testbot bash -lc 'sh ./bin/run-clang-format.sh'
+          GEN_DIFF=$(git status -s)
+
+          if [ -n "$GEN_DIFF" ]; then
+              echo 'linting resulted in changes not in git' 1>&2
+              git status
+              exit 1
+          fi
