offline proto generation

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -40,6 +40,7 @@ jobs:
         run: |
           mkdir build && cd build && cmake .. -G Ninja \
           -DVIAMCPPSDK_USE_DYNAMIC_PROTOS=ON \
+          -DVIAMCPPSDK_OFFLINE_PROTO_GENERATION=ON \
           -DCMAKE_PREFIX_PATH=./vcpkg/installed/x64-linux/share \
           && ninja all && ninja install
         env:
