--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,8 +18,7 @@ jobs:
           git clone https://github.com/Microsoft/vcpkg.git \
           && cd vcpkg && ./bootstrap-vcpkg.sh && ./vcpkg integrate install \
           && ./vcpkg install grpc \
-          && ./vcpkg install upb \
-          && ./vcpkg install protobuf
+          && ./vcpkg install upb
       - name: setup-openssl
         run: sudo apt-get install libssl-dev
       - uses: MarkusJx/install-boost@v2.4.4
@@ -33,6 +32,9 @@ jobs:
       - uses: bufbuild/buf-setup-action@v1.9.0
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
+      - uses: arduino/setup-protoc@v1
+        with:
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
       ###########################################
       #              build the sdk!             #
       ###########################################
