--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,7 +33,7 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
       - name: hacky-move-protobuf
-        run: mv .vcpkg/installed/x64-linux/tools/protobuf/protoc-3.21.12.0 .vcpkg/installed/x64-linux/tools/protobuf/protoc-3.21.12
+        run: sudo mv ./vcpkg/installed/x64-linux/tools/protobuf/protoc-3.21.12.0 ./vcpkg/installed/x64-linux/tools/protobuf/protoc-3.21.12
       ###########################################
       #              build the sdk!             #
       ###########################################
