--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,17 +20,24 @@ jobs:
       - name: run-docker
         run: | 
           docker run --rm -v "$PWD":/usr/src/viam-cpp-sdk -w /usr/src/viam-cpp-sdk cpp /bin/bash \
+          && mkdir build && cd build && cmake .. -G Ninja \
+          -DVIAMCPPSDK_USE_DYNAMIC_PROTOS=ON \
+          -DVIAMCPPSDK_OFFLINE_PROTO_GENERATION=ON \
+          && ninja all && ninja install 
+          && cd src/tests && ctest
+          #docker run --rm -v "$PWD":/usr/src/viam-cpp-sdk -w /usr/src/viam-cpp-sdk cpp /bin/bash \
       #- name: build-sdk
         #run: |
           #apt-get -y --no-install-recommends install software-properties-common \
           #&& apt-add-repository 'deb http://deb.debian.org/debian bullseye-backports main' \
           #&& apt-get update \
           #&& apt-get -y --no-install-recommends install -t bullseye-backports cmake \
-          && mkdir build && cd build && cmake .. -G Ninja \
-          -DVIAMCPPSDK_USE_DYNAMIC_PROTOS=ON \
-          -DVIAMCPPSDK_OFFLINE_PROTO_GENERATION=ON \
-          && ninja all && ninja install 
-          && cd src/tests && ctest
+          #docker run --rm -v "$PWD":/usr/src/viam-cpp-sdk -w /usr/src/viam-cpp-sdk cpp /bin/bash \
+          #&& mkdir build && cd build && cmake .. -G Ninja \
+          #-DVIAMCPPSDK_USE_DYNAMIC_PROTOS=ON \
+          #-DVIAMCPPSDK_OFFLINE_PROTO_GENERATION=ON \
+          #&& ninja all && ninja install 
+          #&& cd src/tests && ctest
       #- name: setup-grpc
         #run: |
           #git clone https://github.com/Microsoft/vcpkg.git \
