--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,10 +2,6 @@ name: Test
 
 on: pull_request
 
-runs:
-  using: 'docker'
-  image: 'etc/docker/Dockerfile.debian.bullseye'
-
 jobs:
   run-tests:
     if: github.repository_owner == 'viamrobotics'
@@ -30,7 +26,7 @@ jobs:
           && cd src/tests && ctest
       - name: run-docker
         run: | 
-          docker run --rm -i -v "$PWD":/usr/src/viam-cpp-sdk -w /usr/src/viam-cpp-sdk cpp /bin/bash \
+          docker run --rm -ti -v "$PWD":/usr/src/viam-cpp-sdk -w /usr/src/viam-cpp-sdk cpp /bin/bash \
           && mkdir build && cd build && cmake .. -G Ninja \
           -DVIAMCPPSDK_USE_DYNAMIC_PROTOS=ON \
           -DVIAMCPPSDK_OFFLINE_PROTO_GENERATION=ON \
