--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,15 +16,16 @@ jobs:
       - uses: docker/setup-qemu-action@v2
       - uses: docker/setup-buildx-action@v2
       - name: build-docker
-        run: docker build -t cpp . -f etc/docker/Dockerfile.debian.bullseye
-      - name: run-docker
-        run: |
+        run: | 
+          docker build -t cpp . -f etc/docker/Dockerfile.debian.bullseye
           docker run --rm -i -v "$PWD":/usr/src/viam-cpp-sdk -w /usr/src/viam-cpp-sdk cpp /bin/bash
           mkdir build && cd build && cmake .. -G Ninja \
           -DVIAMCPPSDK_USE_DYNAMIC_PROTOS=ON \
           -DVIAMCPPSDK_OFFLINE_PROTO_GENERATION=ON \
           && ninja all && ninja install 
           && cd src/tests && ctest
+      #- name: run-docker
+        #run: |
       #- name: run-tests
         #run: |
           #docker run --rm -v "$PWD":/usr/src/viam-cpp-sdk -w /usr/src/viam-cpp-sdk cpp /bin/bash \
