try running it all from dockerfile but worse

--- a/etc/docker/Dockerfile.debian.bullseye
+++ b/etc/docker/Dockerfile.debian.bullseye
@@ -34,3 +34,9 @@ RUN apt-get update
 
 RUN apt-get -y --no-install-recommends install -t bullseye-backports \
     cmake
+
+RUN mkdir build
+RUN cd build
+RUN cmake .. -G Ninja -DVIAMCPPSDK_USE_DYNAMIC_PROTOS=ON -DVIAMCPPSDK_OFFLINE_PROTO_GENERATION=ON
+RUN cd src/tests
+RUN ctest
