copy repo in Dockerfile

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,7 +22,7 @@ jobs:
       - name: build-docker
         run: | 
           docker build -t cpp . -f etc/docker/Dockerfile.debian.bullseye
-          docker run --rm -i -v "$PWD":/usr/src/viam-cpp-sdk -w /usr/src/viam-cpp-sdk cpp /bin/bash \
+          docker run --rm -i -w /usr/src/viam-cpp-sdk cpp /bin/bash \
           && pwd \
           && apt-get -y update && apt-get -y upgrade \
           && mkdir build && cd build && cmake .. -G Ninja \
