--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,8 +21,7 @@ jobs:
           file: ./etc/docker/Dockerfile.debian.bullseye
       - name: build-docker
         run: | 
-          cd etc/docker
-          docker build -t cpp . -f Dockerfile.debian.bullseye
+          docker build -t cpp . -f etc/docker/Dockerfile.debian.bullseye
           docker run --rm -i -w /usr/src/viam-cpp-sdk cpp /bin/bash \
           && pwd \
           && apt-get -y update && apt-get -y upgrade \
