Revert "ignore some build stuff"
This reverts commit 14a5ca0acd9e54a303f9a60e0d3f4220bdd46ae2.

--- a/etc/docker/Dockerfile.debian.bullseye
+++ b/etc/docker/Dockerfile.debian.bullseye
@@ -35,4 +35,7 @@ RUN apt-get update
 RUN apt-get -y --no-install-recommends install -t bullseye-backports \
     cmake
 
-COPY . /usr/src/viam-cpp-sdk
+RUN mkdir build && cd build && pwd && \
+cmake .. -G Ninja -DVIAMCPPSDK_USE_DYNAMIC_PROTOS=ON -DVIAMCPPSDK_OFFLINE_PROTO_GENERATION=ON \
+&& cd src/tests
+&& ctest
