try running it all from dockerfile but worse3

--- a/etc/docker/Dockerfile.debian.bullseye
+++ b/etc/docker/Dockerfile.debian.bullseye
@@ -37,5 +37,5 @@ RUN apt-get -y --no-install-recommends install -t bullseye-backports \
 
 RUN mkdir build && cd build && pwd && \
 cmake .. -G Ninja -DVIAMCPPSDK_USE_DYNAMIC_PROTOS=ON -DVIAMCPPSDK_OFFLINE_PROTO_GENERATION=ON \
-&& cd src/tests
+&& cd src/tests \
 && ctest
