--- a/etc/docker/Dockerfile.debian.bullseye
+++ b/etc/docker/Dockerfile.debian.bullseye
@@ -35,5 +35,5 @@ RUN apt-get update
 RUN apt-get -y --no-install-recommends install -t bullseye-backports \
     cmake
 
-ENTRYPOINT ["/run_test.sh"]
+ENTRYPOINT mkdir build && cd build && pwd && cmake .. -G Ninja -DVIAMCPPPSDK_USE_DYNAMIC_PROTOS=ON -DVIAMCPPSDK_OFFLINE_PROTO_GENERATION=ON && cd src/tests && ctest
 
