--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,23 +13,16 @@ jobs:
       ###########################################
       #     necessary installs for building     #
       ###########################################
-      - uses: docker/setup-qemu-action@v2
-      - uses: docker/setup-buildx-action@v2
-      - uses: docker/build-push-action@v4
-        with:
-          context:
-          file: ./etc/docker/Dockerfile.debian.bullseye
+      # - uses: docker/setup-qemu-action@v2
+      # - uses: docker/setup-buildx-action@v2
+      # - uses: docker/build-push-action@v4
+      #   with:
+      #     context:
+      #     file: ./etc/docker/Dockerfile.debian.bullseye
       - name: build-docker
         run: | 
           docker build -t cpp . -f etc/docker/Dockerfile.debian.bullseye
-          docker run --rm -i -w /usr/src/viam-cpp-sdk cpp /bin/bash \
-          && pwd \
-          && apt-get -y update && apt-get -y upgrade \
-          && mkdir build && cd build && cmake .. -G Ninja \
-          -DVIAMCPPSDK_USE_DYNAMIC_PROTOS=ON \
-          -DVIAMCPPSDK_OFFLINE_PROTO_GENERATION=ON \
-          && ninja all && ninja install \
-          && cd src/tests && ctest
+          docker run --rm -i -w /tmp cpp /bin/bash \
       #- name: run-docker
         #run: |
       #- name: run-tests
