--- a/etc/docker/Dockerfile.debian.bullseye
+++ b/etc/docker/Dockerfile.debian.bullseye
@@ -35,5 +35,6 @@ RUN apt-get update
 RUN apt-get -y --no-install-recommends install -t bullseye-backports \
     cmake
 
-ENTRYPOINT ["/run_test.sh"]
+COPY . /tmp/
+ENTRYPOINT ["etc/docker/run_test.sh"]
 
