--- a/etc/docker/tests/Dockerfile.debian.bullseye
+++ b/etc/docker/tests/Dockerfile.debian.bullseye
@@ -1,3 +1,6 @@
+# n.b. this is primarily a duplicate of the Dockerfile one level up, but with an
+# additional entrypoint for running tests. Not ideal, but sufficient for CI purposes.
+# We should at some point fix this.
 FROM debian:bullseye
 
 ENV HOME /root
@@ -34,3 +37,7 @@ RUN apt-get update
 
 RUN apt-get -y --no-install-recommends install -t bullseye-backports \
     cmake
+
+COPY . /tmp/
+ENTRYPOINT ["etc/docker/tests/run_test.sh"]
+
