--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,42 +13,7 @@ jobs:
       ###########################################
       #     necessary installs for building     #
       ###########################################
-      - name: setup-grpc
+      - name: build-docker-test
         run: |
-          git clone https://github.com/Microsoft/vcpkg.git \
-          && cd vcpkg && ./bootstrap-vcpkg.sh && ./vcpkg integrate install \
-          && ./vcpkg install grpc \
-          && ./vcpkg install upb
-      - name: setup-openssl
-        run: sudo apt-get install libssl-dev
-      - uses: MarkusJx/install-boost@v2.4.4
-        with:
-          boost_version: 1.81.0
-          platform_version: 22.04
-      - uses: lukka/get-cmake@latest
-        with:
-          cmakeVersion: 3.25.2
-          ninjaVersion: 1.11.1
-      - uses: bufbuild/buf-setup-action@v1.9.0
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-      ###########################################
-      #              build the sdk!             #
-      ###########################################
-      - name: build-sdk
-        run: |
-          mkdir build && cd build && cmake .. -G Ninja \
-          -DVIAMCPPSDK_USE_DYNAMIC_PROTOS=ON \
-          -DVIAMCPPSDK_OFFLINE_PROTO_GENERATION=ON \
-          -DCMAKE_PREFIX_PATH=./vcpkg/installed/x64-linux/share \
-          && ninja all && ninja install
-        env:
-          BOOST_ROOT: ${{ github.workspace }}/boost/boost
-      ###########################################
-      #              run the tests!             #
-      ###########################################
-      - name: run-tests
-        run: |
-          cd build/src/tests && ctest
-
-
+          docker build -t cpp . -f etc/docker/tests/Dockerfile.debian.bullseye
+          docker run --rm -i -w /tmp cpp /bin/bash
